<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Laurum">
    <!ENTITY author1 "Asad Asif">
    <!ENTITY author2 "Campbell Leckie">
    <!ENTITY author3 "Roy Ceyleon">
    <!ENTITY author4 "Zhenyang Ding">
    <!ENTITY author5 "Zongyang Li">
    ]>
<resources>
    <string name="app_name">Laurum</string>
    <string name="schedules_tab_label">Schedule</string>
    <string name="reminders_tab_label">Reminders</string>
    <string name="degree_tab_label">Degree</string>
    <string name="courses_tab_label">Courses</string>
    <string name="faculty_tab_label">Faculty</string>
    <string name="resources_tab_label">Resources</string>
    <string name="settings_tab_label">Settings</string>
    <string name="coming_soon">Coming Soon.</string>
    <string name="under_construction">Under Construction</string>
    <string name="todo">TODO</string>
    <string name="icon">icon</string>
    <string name="res_description">Resource Description</string>
    <string name="search_course_hint">Search Course</string>
    <string name="search_faculty_hint">Search Faculty</string>

    <string name="dialog_email_label">E-Mail:</string>
    <string name="dialog_department_label">Department:</string>
    <string name="dialog_title_label">Title:</string>
    <string name="dialog_name_label">Name:</string>
    <string name="dialog_description_label">Description:</string>
    <string name="dialog_credits_label">Credits:</string>

    <string name="course_search_key">course_search_key</string>
    <string name="faculty_search_key">faculty_search_key</string>
    <string name="student_name_key">student_name_key</string>

    <string name="dark_enable_msg">Dark Theme Enabled</string>
    <string name="dark_disable_msg">Dark Theme Disabled</string>
    <string name="deverloper_info_msg">Developed by Group 11</string>
    <string name="version_info_msg">Version 1.0.0</string>
    <string name="degree_progress_label">Degree Progress</string>
    <string name="course_completed_label">Completed</string>

    <string name="dev_info_dlg_title">Developer Information</string>
    <string name="dialog_group_label">Group:</string>
    <string name="group_number">11</string>
    <string name="dialog_members_label">Members:</string>
    <string name="dev_member_1">Asad Asif</string>
    <string name="dev_member_2">Campbell Leckie</string>
    <string name="dev_member_3">Roy Ceyleon</string>
    <string name="dev_member_4">Zhenyang Ding</string>
    <string name="dev_member_5">Zongyang Li</string>
    <string name="user_manual_dlg_title">User Manual</string>

    <string name="how_to_use_msg">Laurum is a …</string>
    <string name="degree_tracking_msg">Degree Tracking allows you to keep track of your degree progress.</string>
    <string name="degree_total_credits_label">Total Credits:</string>
    <string name="degree_course_search_hint">Add a Course</string>
    <string name="starting_credits_key">starting_credits_key</string>
    <string name="required_credits_key">required_credits_key</string>

    <string name="use_manual_howtouse">How to Use</string>
    <string name="use_manual_degreetracking">Degree Tracking</string>
    <string name="search_result_selecttag">Select a Course</string>

    <string name="appearance_title">Appearance</string>
    <string name="under_construction_text">(Under Construction)</string>
    <string name="dark_theme_text">Dark Theme</string>

    <string name="degree_track_title">Degree Tracker Settings</string>
    <string name="starting_credits_text">Starting Credits</string>
    <string name="starting_credits_dialog">Enter Starting Credits Amount</string>
    <string name="required_credits_text">Total Required Credits</string>
    <string name="required_credits_dialog">Enter Total Required Credits Amount</string>

    <string name="search_settings_title">Search Settings</string>
    <string name="course_search_text">Course Search</string>
    <string name="course_search_criteria">Course search criteria</string>
    <string name="faculty_search_text">Faculty Search</string>
    <string name="faculty_search_criteria">Faculty search criteria</string>

    <string name="app_details">App Details</string>
    <string name="about_text">About Laurum</string>
    <string name="about_detail_text">Learn About Laurum</string>
    <string name="github_text">GitHub</string>
    <string name="github_viewrepo_text">View Repository</string>
    <string name="developer_text">Developer</string>
    <string name="developer_group_text">Group 11</string>
    <string name="version_text">Version</string>

    <string name="about_laurum_info">Laurum is designed to provide Wilfrid Laurier University students from both the Brantford and Waterloo campuses helpful tools in one app.\n\nThere are 5 pages: Degree, Courses, Faculty, Resources, and Settings. You can move between them by pressing the appropriate icon on the menu bar. When you open the app, you start on the Degree page.\n\n<b>Degree</b>\nThis page is for you to track progress through your degree credits and see it in a progress bar. You can modify how many credits you start with and need in Settings under the Degree Tracker Settings category. You can add additional courses by pressing the add button and searching for courses. This search bar is affected by Course Search under the Search Settings category in Settings. Courses you add are displayed in Degree as buttons in a list. Pressing the course displays its details. Filling in the \'Completed\’ checkbox adds the credit value of that course to the amount of credits you have completed, and unchecking it undoes this action. Press the \‘x\’ in the corner to remove the course, which will also remove its credit contribution if it was marked as completed. You are allowed to finish more credits than you need.\n\n<b>Courses</b>\nThis page shows you a list of all courses and has a search bar for you to look for specific courses. Each course is a button and pressing it displays the Course ID, Course Title, Credits, and Description. You can filter for specific courses by typing in the search bar. This search bar is affected by Course Search under the Search Settings category in Settings.\n\n<b>Faculty</b>\nThis page shows you a list of all faculty and has a search bar for you to look for specific members. Each person is a button and pressing it displays their Name, Title, Department, and E-Mail. Some members may have empty fields. Pressing \‘EMAIL\’ will prompt you to open an email app where the recipient is the faculty member you have selected. You can filter for specific faculty members by typing in the search bar. This search bar is affected by Faculty Search under the Search Settings category in Settings.\n\n<b>Resources</b>\nThis page provides a list of links to helpful resources that the university provides. Each resource is a button containing a title and description. Pressing it will prompt you to select a browser to open the link in.\n\n<b>Settings</b>\nSettings allow you to set filters and customize the app to better fit your needs.\n\nDegree Tracker Settings are for modifying credit values for the Degree page. Starting Credits is by default 0 and Total Required Credits is by default 20.0. Both values can be set to any positive number. Starting Credits can be higher than Total Required Credits. Search Settings put a filter on search bars for courses and faculty. By default, there is no filter and text searched up will be matched with all text associated with the appropriate subject. Course Search adds the following filters to the search in the Degree and Courses page: Course ID, Course Title, Course Description. Faculty Search adds the following filters to the search in the Faculty page: Name, Title, Department. Filters can be removed by selecting the \‘All\’ option under each set of filter options.\n\nApp Details contains information about the app, such as a brief description of features offered by Laurum, a link to the Laurum GitHub repository, the developers\’ names, and the current version of the app.\n\n<b>Version:</b>\n1.0.0\n\n<b>Developers:</b>\nGroup 11\n\n<b>Group Members:</b>\n&author1;\n&author2;\n&author3;\n&author4;\n&author5;</string>
    <string name="degree_complete">Degree Complete</string>
</resources>