<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewResource"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    card_view:cardBackgroundColor="@color/wlu_purple"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="15dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/resource_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/resource_icon"
                app:layout_constraintHorizontal_bias="0.0"
                android:fontFamily="sans-serif"
                android:textColor="@color/wlu_gold"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/resource_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/icon"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="end|center_vertical"
                android:text="@string/app_name"
                android:textColor="#000"
                card_view:srcCompat="@drawable/ic_resource" />

            <TextView
                android:id="@+id/resource_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/resource_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:gravity="top"
                android:textSize="12sp"
                android:text="@string/res_description"
                android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>