<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewDegreeCourses"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="5dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/degree_course_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/course_remove"
                android:fontFamily="sans-serif"
                android:textColor="@color/wlu_purple"
                android:textStyle="bold"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/degree_course_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/degree_course_id"
                android:gravity="top"
                android:text="@string/res_description"
                android:autoSizeMinTextSize="10sp"
                android:textColor="@color/gray" />

        <ImageView
            android:id="@+id/course_remove"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:clickable="true"
            android:focusable="true"
            android:longClickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_remove" />

        <CheckBox
            android:id="@+id/checkbox_complete"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:text="@string/course_completed_label"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>