<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/degreeProgress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        android:text="@string/degree_progress_label"
        android:textColor="@color/wlu_purple"
        android:textStyle="bold"
        android:layout_margin="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"
        android:gravity="center"
        android:indeterminate="false"
        android:indeterminateOnly="false"
        android:max="2000"
        android:progress="0"
        android:progressTint="@color/wlu_gold"
        android:scaleY="8"
        android:secondaryProgress="2000"
        android:secondaryProgressTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/degreeProgress_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/degreeProgressPercent"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        android:text=""
        android:textStyle="bold"
        android:textColor="@color/wlu_purple"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:id="@+id/total_credits"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/degreeTotalCredits_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_total_credits_label"
            android:textColor="@color/wlu_purple"
            android:textStyle="bold"
            android:layout_margin="2dp" />
        <TextView
            android:id="@+id/degreeCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/wlu_purple"
            android:layout_margin="2dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/degreeCompletionMsg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/degree_course_list"
        android:text="@string/degree_complete"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:background="@android:color/transparent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/degree_course_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:requiresFadingEdge="horizontal|vertical"
        android:scrollbarSize="5dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/add_course_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/degreeCompletionMsg"
        tools:listitem="@layout/degree_course_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_course_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="@color/wlu_purple"
        android:backgroundTintMode="src_in"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/wlu_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:fabSize="auto" />

</androidx.constraintlayout.widget.ConstraintLayout>