<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/courseDialog_id"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:scaleType="center"
        android:text = ""
        android:gravity="fill_horizontal|fill|center"
        android:textColor="@color/wlu_gold"
        android:textSize="16sp"
        android:background="@color/wlu_purple"
        android:drawablePadding="10dp"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="10dp"
        app:drawableLeftCompat="@drawable/ic_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/courseTitle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/wlu_purple"
        android:layout_margin="4dp"
        android:text = "@string/dialog_title_label"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/courseCredits_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wlu_purple"
            android:layout_margin="4dp"
            android:text = "@string/dialog_credits_label"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:id="@+id/courseCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/courseDesc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wlu_purple"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text = "@string/dialog_description_label"
            android:textStyle="bold" />
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:requiresFadingEdge="horizontal|vertical"
            android:fillViewport="true">
        <TextView
            android:id="@+id/courseDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars = "vertical"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>